Fixed a broken link in a Makefile.

--- a/lib/sys/Makefile
+++ b/lib/sys/Makefile
@@ -3,7 +3,7 @@
 ### definitions ###
 
 # default/library definitions
-include $(DOGPACK)/lib/sys/Makefile.defs
+include $(FINESS)/lib/sys/Makefile.defs
 
 # override defaults
 CLEAN_FILES = *.o
@@ -12,6 +12,6 @@ CLEAN_FILES = *.o
 
 lib: $(LIB_SYS_OBJECTS)
 
-include $(DOGPACK)/lib/sys/Makefile.targets
+include $(FINESS)/lib/sys/Makefile.targets
 
 ### DO NOT remove this line - make depends on it ###
