--- a/config/Makefile.config
+++ b/config/Makefile.config
@@ -37,9 +37,7 @@ USE_H5CPP = 0
 # serial code with debugging options (this runs slow!)
 # LINK = time g++ -ggdb -DCHECK_BOUNDS
 
-LINK = time g++-4.7 -O4 -fopenmp -lgomp
-#LINK = time g++-4.7 -O4
-#LINK = time g++-4.7 -O2
+LINK = time g++ -O4
 #LINK = time g++ -O4 -fopenmp -lgomp
 
 #LINK = time g++-4.7 -ggdb
