Finished trimming the 1D library.
Next items on the agenda include:

1.) ConstructL - the WENO reconstruction procedure.
2.) Plotting routines - One should be able to read in the data files, and plot
the output for visualization.

--- a/apps/1d/advection/smooth_example/Makefile
+++ b/apps/1d/advection/smooth_example/Makefile
@@ -9,23 +9,6 @@ include $(FINESS)/lib/1d/Makefile.defs
 #
 
 ## ------------------------------------------------------------------------- ##
-# List of a few different options explored for this problem:
-#
-#   DogSolveRK4  : classical, fourth-order time integration.
-#   DogSolveSL   : Semi-Lagrangian solver
-#   DogSolveTDRK : Fourth-order, two-derivative solver
-#
-# We currently have no mechanism in place to select out of these various
-# solvers, so this Makefile has to link to the appropriate solver.
-#
-#DogSolveUser           = $(DOGPACK)/apps/semi_lagrangian/lib/1d/DogSolveSL
-#DogSolveUser           = $(DOGPACK)/lib/1d/DogSolveRK4
-#DogSolveUser           = $(DOGPACK)/lib/1d/DogSolveTDRK
-## ------------------------------------------------------------------------- ##
-
-#RiemannSolveLxW         = $(DOGPACK)/lib/1d/LaxWendroff/RiemannSolveLxW_HLL
-
-## ------------------------------------------------------------------------- ##
 # These time derivatives are required for the Lax-Wendroff (and
 # two-derivative) code:
 DFluxFunc              = DFluxFunc
@@ -39,6 +22,6 @@ ALL_SOURCES = $(COMMON_SOURCES) $(SL_LIB_SOURCES)
 
 ### targets ###
 
-include $(DOGPACK)/lib/Makefile.targets
+include $(FINESS)/lib/Makefile.targets
 
 ### DO NOT remove this line - make depends on it ###
