--- a/lib/sys/tests/test_ini.ini
+++ b/lib/sys/tests/test_ini.ini
@@ -6,7 +6,7 @@ cflv(2)     = 0.19       ; desired Courant number
 time_stepping_method = Runge-Kutta ; (e.g., Runge-Kutta, SDC, Advec)
 method(1)   = 2   ; order of accuracy in space
 method(2)   = 2   ; order of accuracy in time
-matlab_addpath="addpath([getenv('DOGPACK') '/matlab/plasma']);";comment
+matlab_addpath="addpath([getenv('FINESS') '/matlab/plasma']);";comment
 [section2]
 mx    =     16    ; number of grid elements in x-direction
 mystring = "this long string contains spaces \\ and escaped \" characters" ; the comment character must have spaces on each side.
