Created new branch intended for a documentation of current code, tracing only what's involved in apps/1d/euler/harten_shock_tube. Main page created; tensor classes documentation started -- 1-dimensional dTensor classes are documented in detail, others are left as @todo entries -- needs to create a group/page for tensor classes.
Signed-off-by: Xiao Feng <matheffex@gmail.com>

--- a/config/Makefile.config
+++ b/config/Makefile.config
@@ -32,18 +32,19 @@ USE_H5CPP = 0
 #            : you do not need to include this flag when compiling on mac os x
 
 # serial code with optimizer turned on:
-# LINK = time g++ -O4
+LINK = time g++ -O4
 
 # serial code with debugging options (this runs slow!)
 # LINK = time g++ -ggdb -DCHECK_BOUNDS
 
-LINK = time g++ -O4
+#LINK=time icc -O3
+#LINK = time g++ -O4
 #LINK = time g++ -O4 -fopenmp -lgomp
 
 #LINK = time g++-4.7 -ggdb
 
 # the following symbol is deprecated
-FFLAGS =  -c $(INCLUDE_LIBS)
+FFLAGS =  -c $(INCLUDE_LIBS) -I /usr/include/x86_64-linux-gnu/c++/4.8
 # in favor of
 COMPILE = $(LINK) $(FFLAGS) #$(COMPILE_FLAGS)
 
