--- a/apps/2d/advection/smooth_example/parameters.ini
+++ b/apps/2d/advection/smooth_example/parameters.ini
@@ -1,20 +1,21 @@
 
 ; Parameters common to dogpack applications
 [dogParams]
-defaults_file = "$FINESS/config/dogParams_defaults.ini"
-ndims       = 2          ; 1, 2, or 3
+defaults_file = "$DOGPACK/config/dogParams_defaults.ini"
+ndims       = 2          ; 1 or 2
 mesh_type   = Cartesian  ; (either Cartesian or Unstructured) 
-nout        = 10         ; number of output times to print results
+nout        = 1          ; number of output times to print results
 tfinal      = 1.00       ; final time
-dtv(1)      = 1.00e-03   ; initial dt
-dtv(2)      = 1.0e10     ; max allowable dt 
-cflv(1)     = 1.00       ; max allowable Courant number
-cflv(2)     = 0.95       ; desired Courant number
+dtv(1)      = 1.375000e-02     ; initial dt
+dtv(2)      = 1.0e0      ; max allowable dt 
+cflv(1)     = 0.01       ; max allowable Courant number
+cflv(2)     = 0.008      ; desired Courant number
 nv          = 500000     ; max number of time steps per call to DogSolve
-time_stepping_method = Runge-Kutta ; (e.g., Runge-Kutta, SDC, Lax-Wendroff, User-Defined)
+time_stepping_method = User-Defined ; (e.g., Runge-Kutta, SDC, Lax-Wendroff, User-Defined)
+;time_stepping_method = Lax-Wendroff ; (e.g., Runge-Kutta, SDC, Lax-Wendroff, User-Defined)
 limiter_method = moment ; (e.g., moment, viscosity)
 space_order = 5   ; =method(1)= order of accuracy in space
-time_order  = 3   ; =method(2)= order of accuracy in time
+time_order  = 2   ; =method(2)= order of accuracy in time
 use_limiter = 0   ; =method(3)= use limiter (1-yes, 0-no)
 verbosity   = 1   ; =method(4)= verbosity of output
 mcapa       = 0   ; =method(5)= mcapa (capacity function index in aux arrays)
@@ -28,9 +29,9 @@ datafmt     = 1   ; 1 for ascii, 5 for hdf5.
 ;   Cartesian grid data (ignored if Unstructured)
 ; -------------------------------------------------
 [grid]
-mx    =  30      ; number of grid elements in x-direction
-my    =  30      ; number of grid elements in y-direction
-mbc   =   3      ; number of ghost cells on each boundary
+mx    =  128  ; number of grid elements in x-direction
+my    =  128  ; number of grid elements in y-direction
+mbc   =   2      ; number of ghost cells on each boundary
 xlow  =   0.0e0  ; left end point
 xhigh =   1.0e0  ; right end point
 ylow  =   0.0e0  ; lower end point
