--- a/apps/1d/burgers/sine_to_n/parameters.ini
+++ b/apps/1d/burgers/sine_to_n/parameters.ini
@@ -4,14 +4,14 @@
 defaults_file = "$FINESS/config/dogParams_defaults.ini"
 ndims       = 1             ; 1 or 2
 mesh_type   = Cartesian     ; (either Cartesian or Unstructured) 
-nout        = 20            ; number of output times to print results
-tfinal      = 0.10          ; final time 
+nout        = 10            ; number of output times to print results
+tfinal      = 1.591549430918953e-01 ; final time 
 dtv(1)      = 0.001         ; initial dt
 dtv(2)      = 1e10          ; max allowable dt 
-cflv(1)     = 0.44          ; max allowable Courant number
-cflv(2)     = 0.40          ; desired Courant number
+cflv(1)     = 0.84          ; max allowable Courant number
+cflv(2)     = 0.500000       ; desired Courant number
 nv          = 500000     ; max number of time steps per call to DogSolve
-time_stepping_method = Runge-Kutta ; (e.g., Runge-Kutta, SDC, Lax-Wendroff, User-Defined)
+time_stepping_method = Lax-Wendroff ; (e.g., Runge-Kutta, SDC, Lax-Wendroff, User-Defined)
 limiter_method = moment ; (e.g., moment, viscosity)
 space_order = 5   ; =method(1)= order of accuracy in space
 time_order  = 3   ; =method(2)= order of accuracy in time
@@ -26,8 +26,8 @@ nstart      = 0   ; if mrestart==1: from file q(nstart)_restart.dat
 datafmt     = 1   ; 1 for ascii, 5 for hdf5.
 
 [grid]
-mx    =  120     ; number of grid elements in x-direction
+mx    =    100   ; number of grid elements in x-direction
 mbc   =      3   ; number of ghost cells on each boundary
 xlow  =  0.0e0   ; left end point
-xhigh =  1.0e0   ; right end point
+xhigh =  2.0e0   ; right end point
 
