--- a/apps/1d/euler/harten_shock_tube/parameters.ini
+++ b/apps/1d/euler/harten_shock_tube/parameters.ini
@@ -6,10 +6,10 @@ nout        = 10        ; number of output times to print results
 tfinal      = 0.16      ; final time
 dtv(1)      = 0.0000005    ; initial dt
 dtv(2)      = 1.0e10    ; max allowable dt 
-cflv(1)     = 1.0     ; max allowable Courant number 1/(2k-1)
-cflv(2)     = 0.90      ; desired Courant number
+cflv(1)     = 0.9     ; max allowable Courant number 1/(2k-1)
+cflv(2)     = 0.40      ; desired Courant number
 nv          = 500000    ; max number of time steps per call to DogSolve
-time_stepping_method = Runge-Kutta ; (e.g., Runge-Kutta, SDC, Lax-Wendroff, User-Defined)
+time_stepping_method = Lax-Wendroff ; (e.g., Runge-Kutta, SDC, Lax-Wendroff, User-Defined)
 limiter_method = moment ; (e.g., moment, viscosity)
 space_order = 5  ; =method(1)= order of accuracy in space
 time_order  = 3  ; =method(2)= order of accuracy in time
