--- a/apps/2d/advection/smooth_example/parameters.ini
+++ b/apps/2d/advection/smooth_example/parameters.ini
@@ -5,13 +5,14 @@ defaults_file = "$FINESS/config/dogParams_defaults.ini"
 ndims       = 2          ; 1, 2, or 3
 mesh_type   = Cartesian  ; (either Cartesian or Unstructured) 
 nout        = 10         ; number of output times to print results
-tfinal      = 1.00       ; final time
+tfinal      = 10.00       ; final time
 dtv(1)      = 1.00e-03   ; initial dt
 dtv(2)      = 1.0e10     ; max allowable dt 
 cflv(1)     = 1.00       ; max allowable Courant number
-cflv(2)     = 0.95       ; desired Courant number
+cflv(2)     = 0.40       ; desired Courant number
 nv          = 500000     ; max number of time steps per call to DogSolve
-time_stepping_method = Runge-Kutta ; (e.g., Runge-Kutta, SDC, Lax-Wendroff, User-Defined)
+;time_stepping_method = Runge-Kutta ; (e.g., Runge-Kutta, SDC, Lax-Wendroff, User-Defined)
+time_stepping_method = Lax-Wendroff;; (e.g., Runge-Kutta, SDC, Lax-Wendroff, User-Defined)
 limiter_method = moment ; (e.g., moment, viscosity)
 space_order = 5   ; =method(1)= order of accuracy in space
 time_order  = 3   ; =method(2)= order of accuracy in time
@@ -30,7 +31,7 @@ datafmt     = 1   ; 1 for ascii, 5 for hdf5.
 [grid]
 mx    =  30      ; number of grid elements in x-direction
 my    =  30      ; number of grid elements in y-direction
-mbc   =   3      ; number of ghost cells on each boundary
+mbc   =   5      ; number of ghost cells on each boundary
 xlow  =   0.0e0  ; left end point
 xhigh =   1.0e0  ; right end point
 ylow  =   0.0e0  ; lower end point
