cleaning up a few applications

--- a/apps/2d/euler/mach_reflection/Makefile
+++ b/apps/2d/euler/mach_reflection/Makefile
@@ -5,7 +5,7 @@ include $(FINESS)/lib/2d/Makefile.defs
 
 # overridden library objects
 #
-#AfterQinit  =  AfterQinit
+AfterQinit  =  AfterQinit
 InitApp      = InitApp
 DFluxFunc    = DFluxFunc
 D2FluxFunc   = D2FluxFunc
