Revert "Adds WenoParams class.  Adds global variable wenoParams. Adds call to wenoParams.init() in 1d version of RunFinpack()"
This reverts commit 615d078e0397a8b5acf5f43845dbbb482114a8a6.

--- a/config/Makefile.config
+++ b/config/Makefile.config
@@ -37,7 +37,7 @@ USE_H5CPP = 0
 # serial code with debugging options (this runs slow!)
 # LINK = time g++ -ggdb -DCHECK_BOUNDS
 
-LINK = time g++ -std=c++11 -O2
+LINK = time g++ -O4
 #LINK = time g++ -O4 -fopenmp -lgomp
 
 #LINK = time g++-4.7 -ggdb
