--- a/apps/2d/advection/smooth_example/parameters.ini
+++ b/apps/2d/advection/smooth_example/parameters.ini
@@ -1,21 +1,20 @@
-
 ; Parameters common to dogpack applications
 [dogParams]
 defaults_file = "$FINESS/config/dogParams_defaults.ini"
 ndims       = 2          ; 1, 2, or 3
 mesh_type   = Cartesian  ; (either Cartesian or Unstructured) 
 nout        = 10         ; number of output times to print results
-tfinal      = 10.00       ; final time
+tfinal      = 1.0        ; final time
 dtv(1)      = 1.00e-03   ; initial dt
 dtv(2)      = 1.0e10     ; max allowable dt 
 cflv(1)     = 1.00       ; max allowable Courant number
 cflv(2)     = 0.40       ; desired Courant number
 nv          = 500000     ; max number of time steps per call to DogSolve
-;time_stepping_method = Runge-Kutta ; (e.g., Runge-Kutta, SDC, Lax-Wendroff, User-Defined)
-time_stepping_method = Lax-Wendroff;; (e.g., Runge-Kutta, SDC, Lax-Wendroff, User-Defined)
+time_stepping_method = Runge-Kutta ; (e.g., Runge-Kutta, SDC, Lax-Wendroff, User-Defined)
+;time_stepping_method = Lax-Wendroff;; (e.g., Runge-Kutta, SDC, Lax-Wendroff, User-Defined)
 limiter_method = moment ; (e.g., moment, viscosity)
-space_order = 5   ; =method(1)= order of accuracy in space
-time_order  = 3   ; =method(2)= order of accuracy in time
+space_order = 9   ; =method(1)= order of accuracy in space
+time_order  = 5   ; =method(2)= order of accuracy in time
 use_limiter = 0   ; =method(3)= use limiter (1-yes, 0-no)
 verbosity   = 1   ; =method(4)= verbosity of output
 mcapa       = 0   ; =method(5)= mcapa (capacity function index in aux arrays)
@@ -37,3 +36,10 @@ xhigh =   1.0e0  ; right end point
 ylow  =   0.0e0  ; lower end point
 yhigh =   1.0e0  ; upper end point
 
+; -------------------------------------------------
+;   WENO values
+; -------------------------------------------------
+[weno]
+weno_version  = JS     ; type of WENO reconstruction (e.g. JS, FD, Z)
+epsilon       = 1e-29  ; regulization parameter  ( epsilon > 0.0        )
+alpha_scaling = 1.1    ; scaling parameter       ( alpha_scaling >= 1.0 )
