--- a/apps/1d/advection/sq_wave/parameters.ini
+++ b/apps/1d/advection/sq_wave/parameters.ini
@@ -3,21 +3,20 @@
 defaults_file = "$FINESS/config/dogParams_defaults.ini"
 ndims       = 1          ; 1, 2, or 3
 mesh_type   = Cartesian  ; (either Cartesian or Unstructured) 
-nout        = 1          ; number of output times to print results
-tfinal      = 1.00       ; final time
-dtv(1)      = 1.0e-03    ; initial dt
+nout        = 10         ; number of output times to print results
+tfinal      = 2.00       ; final time
+dtv(1)      = 1.0e00     ; initial dt
 dtv(2)      = 1.0e4      ; max allowable dt 
-cflv(1)     = 1.50       ; max allowable Courant number
-cflv(2)     = 1.00       ; desired Courant number
+cflv(1)     = 1.00       ; max allowable Courant number
+cflv(2)     = 0.70        ; desired Courant number
 nv          = 500000     ; max number of time steps per call to DogSolve
 ;time_stepping_method = Runge-Kutta ; (e.g., Runge-Kutta, SDC, Lax-Wendroff, User-Defined)
-;time_stepping_method = Lax-Wendroff ; (e.g., Runge-Kutta, SDC, Lax-Wendroff, User-Defined)
-time_stepping_method = Multiderivative ; (e.g., Runge-Kutta, SDC, Lax-Wendroff, User-Defined)
+time_stepping_method = Lax-Wendroff ; (e.g., Runge-Kutta, SDC, Lax-Wendroff, User-Defined)
 limiter_method = moment ; (e.g., moment, viscosity)
 space_order = 5   ; =method(1)= order of accuracy in space
-time_order  = 5   ; =method(2)= order of accuracy in time
+time_order  = 3   ; =method(2)= order of accuracy in time
 use_limiter = 0   ; =method(3)= use limiter (1-yes, 0-no)
-verbosity   = 1   ; =method(4)= verbosity of output
+verbosity   = 0   ; =method(4)= verbosity of output
 mcapa       = 0   ; =method(5)= mcapa (capacity function index in aux arrays)
 maux        = 1   ; =method(6)= maux (number of aux arrays, maux >= mcapa)
 source_term = 0   ; =method(7)= source term (1-yes, 0-no)
@@ -30,6 +29,10 @@ withPyClawPlotting = 0; (1-yes, 0-no)
 [grid]
 mx    = 100   ; number of grid elements in x-direction
 mbc   = 5     ; number of ghost cells on each boundary
-xlow  = 0.0e0 ; left end point
+xlow  =-1.0e0 ; left end point
 xhigh = 1.0e0 ; right end point
 
+[weno]
+weno_version  = JS     ; type of WENO reconstruction (e.g. JS, FD, Z)
+epsilon       = 1e-29  ; regulization parameter  ( epsilon > 0.0        )
+alpha_scaling = 1.0    ; scaling parameter       ( alpha_scaling >= 1.0 )
