adding AfterFullTimeStep to new Euler problem

--- a/apps/2d/euler/wind_tunnel_w_step/Makefile
+++ b/apps/2d/euler/wind_tunnel_w_step/Makefile
@@ -5,10 +5,11 @@ include $(FINESS)/lib/2d/Makefile.defs
 
 # overridden library objects
 #
-AfterQinit  =  AfterQinit
-InitApp      = InitApp
-DFluxFunc    = DFluxFunc
-D2FluxFunc   = D2FluxFunc
+AfterQinit          =  AfterQinit
+InitApp             = InitApp
+DFluxFunc           = DFluxFunc
+D2FluxFunc          = D2FluxFunc
+AfterFullTimeStep   = AfterFullTimeStep
 
 ALL_OBJECTS = $(COMMON_OBJECTS) \
 EulerParams.o \
