--- a/apps/2d/euler/wind_tunnel_w_step/Makefile
+++ b/apps/2d/euler/wind_tunnel_w_step/Makefile
@@ -3,13 +3,25 @@
 # default/library definitions
 include $(FINESS)/lib/2d/Makefile.defs
 
-# overridden library objects
-#
-AfterQinit          =  AfterQinit
+### overridden library objects ###
+
+# For saving 'eulerhelp.dat', which contains gamma gas constant
+AfterQinit          = AfterQinit
+
+# Used to call EulerParams (saves gamma gas constant)
 InitApp             = InitApp
+
+# Lax-Wendroff routines
 DFluxFunc           = DFluxFunc
 D2FluxFunc          = D2FluxFunc
+
+# Used to replace values inside wedge with (constant) initial conditions
 AfterFullTimeStep   = AfterFullTimeStep
+
+# Routines needed to be overwritten in order to implement the correct boundary
+# conditions.  For this problem, we need two SetBndValues functions: one for
+# x-direction, and one for y-direction
+ConstructL          = ConstructL
 
 ALL_OBJECTS = $(COMMON_OBJECTS) \
 EulerParams.o \
