new WENO differentiation for 1D *systems*

--- a/apps/1d/shallow_water/dam_break/Makefile
+++ b/apps/1d/shallow_water/dam_break/Makefile
@@ -9,8 +9,11 @@ include $(FINESS)/lib/1d/Makefile.defs
 DFluxFunc             = DFluxFunc
 D2FluxFunc            = D2FluxFunc
 
-#
 #DogSolveUser           = $(FINESS)/lib/1d/DogSolveTDRK
+
+# Experimental new method that uses WENO *differentiation* on the interior of
+# the time-integrated flux function.
+#ConstructIntegratedF    = ConstructIntegratedF
 
 # place to add object modules
 #
