--- a/apps/1d/shallow_water/dam_break/parameters.ini
+++ b/apps/1d/shallow_water/dam_break/parameters.ini
@@ -6,10 +6,11 @@ nout        = 10        ; number of output times to print results
 tfinal      = 0.2       ; final time
 dtv(1)      = 0.0002    ; initial dt
 dtv(2)      = 1.0e10    ; max allowable dt 
-cflv(1)     = 1.00      ; max allowable Courant number 1/(2k-1)
-cflv(2)     = 0.44     ; desired Courant number
+cflv(1)     = 0.40      ; max allowable Courant number 1/(2k-1)
+cflv(2)     = 0.34     ; desired Courant number
 nv          = 500000    ; max number of time steps per call to DogSolve
-time_stepping_method = Runge-Kutta ; (e.g., Runge-Kutta, SDC, Lax-Wendroff, User-Defined)
+;time_stepping_method = Runge-Kutta ; (e.g., Runge-Kutta, SDC, Lax-Wendroff, User-Defined)
+time_stepping_method = Lax-Wendroff ; (e.g., Runge-Kutta, SDC, Lax-Wendroff, User-Defined)
 limiter_method = moment ; (e.g., moment, viscosity)
 space_order = 5  ; =method(1)= order of accuracy in space
 time_order  = 3  ; =method(2)= order of accuracy in time
@@ -24,6 +25,6 @@ nstart      = 0  ; if mrestart==1: from file q(nstart)_restart.dat
 datafmt     = 1  ; 1 for ascii, 5 for hdf5.
 [grid]
 mx    = 100   ; number of grid elements in x-direction
-mbc   = 3     ; number of ghost cells on each boundary
+mbc   = 5     ; number of ghost cells on each boundary
 xlow  = 0.0e0 ; left end point
 xhigh = 1.0e0 ; right end point
